2002-02-03  Bruno Coudoin  <bruno.coudoin@free.fr>

	* src/boards/railroad.c: Fixed crash at last level. MODEL_MAX_SIZE was not set properly.
	* src/boards/smallnumbers.c: Added number sounds
	* src/boards/gletters.c: Added letter sounds
	* boards/railroad/*.png: some pixmap cleanup to remove white borders.
	* src/gcompris/bar.c: added gcompris_bar_hide entry to hide/restore the buttons bar.
	* src/help.c: changed to use gcompris_bar_hide
	*             changed the way button title are coded to make the i18n works
	* src/config.c: changed to use gcompris_bar_hide
	* src/about.c: changed to use gcompris_bar_hide
	* src/boards/missingletter.c: Fixed doubleclick on OK infinite bonus loop
	* src/board/clickgame.c: added the bonus API
	* src/board/planegame.c: removed the sound when the wrong cloud is hit due to too much noise
	*                        when the plane is in a storm ;)
	*                        Fixed the cloud detection to work even when a cloud is hit in front
	
2002-01-19  Bruno Coudoin  <bruno.coudoin@free.fr>

	* src/gcompris/properties.c: fixed locale initialization to use use current locale intead of en
	* src/gcompris/gcompris.c: modified locale retrieving because setlocale does not work for me
	                           I now get the env variable LC_ALL and LANG if not found.
	
2002-01-14  Bruno Coudoin  <bruno.coudoin@free.fr>

	* src/gcompris/about.c: completed the about box
	* src/gcompris/gcompris.c: disabled gnome crash dialog in full screen
	* src/gcompris/gameutil.c: added code in convertUTF8Toisolat1 to replace \ n by real one
	* xml-i18n: replaced all references to xml-i18n by the newer intltool
	* src/boards/*.c: removed the use of get_board_playing and replaced by a test on gcomprisBoard
	                  this was creating intermitent problems when leaving a board being redisplayed
	* src/boards/draw.c: implemented a workaround to avoid grab lock on doubleclick