@@ -13,7 +13,7 @@
 The goal is just to click with the left mouse button on the moving fish.</_goal>
 	<_manual>Credits:
 Fish are taken from the Unix utility xfishtank.
-Images are taken from the National Undersearch Research Program (NURP) Collection
+Images are taken from the National Undersea Research Program (NURP) Collection
 at http://www.photolib.noaa.gov
 All images credit bellongs to the OAR/National Undersea Research Program (NURP).
 Except for the first image that also credits the University of North Carolina at Wilmington.
