@@ -7,6 +7,6 @@
 	 author="Bruno Coudoin (bruno.coudoin at free.fr)"
 	 boarddir="">
 	 <_name>Numbers With Dices</_name>
-	 <_description>Type the keyboard number 1 to 9 before the dice reach the ground</_description>
+	 <_description>Type the keyboard number 1 to 9 before the dice reaches the ground</_description>
   </Board>
 </GCompris>
