@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 
 AC_INIT(configure.in)
-AM_INIT_AUTOMAKE(gcompris, 1.0.0Pre2)
+AM_INIT_AUTOMAKE(gcompris, 1.0.0Pre3)
 AM_CONFIG_HEADER(config.h)
 
 AC_PROG_CC
