@@ -1,3 +1,9 @@
+2002-02-06  Bruno Coudoin  <bruno.coudoin@free.fr>
+
+	* src/gcompris/config.c: fixed translation
+	* src/gcompris/about.c: fixed translation
+	* src/board/wordsgame.c: changed level scheme
+
 2002-02-03  Bruno Coudoin  <bruno.coudoin@free.fr>
 
 	* src/boards/railroad.c: Fixed crash at last level. MODEL_MAX_SIZE was not set properly.
